100 fix products filters (#101)
* 100-fix-products-filters